--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "react-chartjs-2": "^2.9.0",
     "react-charts": "^2.0.0-beta.7",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "react-select": "^3.1.0"
+    "react-select": "^3.1.0",
+    "sass-node": "^4.11.2"
   },
   "scripts": {
     "start": "react-scripts start",
